--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,49 @@
 body {
-	background: url(https://images.unsplash.com/photo-1460500063983-994d4c27756c?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=27c2758e7f3aa5b8b3a4a1d1f1812310) no-repeat center center fixed;
+	/*background: url(https://images.unsplash.com/photo-1460500063983-994d4c27756c?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=27c2758e7f3aa5b8b3a4a1d1f1812310) no-repeat center center fixed;
 	-webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
+  background-size: cover;*/
+  background: black;
+}
+
+/*styling for the player*/
+
+#player {
+	width: 80%;
+	height: 100px;
+	margin: 25px auto;
+	background: rgba(255,255,255,0.7);
+	border-radius: 2%;
+	padding: 5px;
+	text-align: center;
+}
+
+.current_song_display {
+	font-size: 1.3em;
+	font-weight: bold;
 }
 
 #pause {
+	display: none;
+}
+.player_buttons {
+	width: 100%;
+	margin: 10px auto;
+	font-size: 2.5em;
+}
+
+.progress {
+	height: 3px;
+	margin: 5px 0;
+}
+#song_progress {
+	background: green;
+}
+
+
+/*styling for the form to add song*/
+
+#song-form {
 	display: none;
 }
