--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -1,29 +1,30 @@
 @import 'mixin';
 
 body {
-	background: url(/Users/ohadyarel/Desktop/nycda/w7/d01/jukebox/images/bg1-1.jpg) no-repeat center center fixed;
+	background: url(https://images.unsplash.com/photo-1441803293480-6d6c52f377d9?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=d9d0520d232f3ac43a3c92f5f1cdfb9a) no-repeat center center fixed;
 	-webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+ // background: black;
 }
 
 /*the player*/
 
 #player {
 	width: 80%;
-	height: 100px;
-	margin: 25px auto;
+	// height: 100px;
+	margin: 0 auto;
 	@include white(0.5);
-	// background: rgba(255,255,255,0.7);
-	border: 1px solid rgba(255,255,255,0.2);
+	border: 1px solid rgba(255,255,255,0.5);
 	border-radius: 1%;
 	padding: 5px;
 	text-align: center;
+	margin-top: 25px;
 }
 
 .current_song_display {
-	font-size: 1.3em;
+	font-size: 1.2em;
 	font-weight: bold;
 }
 
@@ -33,7 +34,7 @@ body {
 
 .player_buttons {
 	width: 100%;
-	margin: 10px auto;
+	margin: 10px auto 0 auto;
 	font-size: 2.5em;
 }
 
@@ -46,38 +47,58 @@ body {
 }
 
 /*the main wrapper containing the playlist and the form*/
-#wrapper {
+#accordion {
 	width: 80%;
-	height: 400px;
-	margin: 20px auto;
-	@include white(0.5);
-	border: 1px solid rgba(255,255,255,0.2);
-	border-radius: 1%;
-	padding: 5px;
+	margin: 5px auto;
+	.panel {
+		background: none;
+	}
+	.panel-heading {
+		text-align: center;
+		@include white(0.5);
+		.panel-title {
+			font-size: 0.8em;
+		}
+	}
+	.panel-body {
+		@include white(0.5);
+	}
 }
 
-#navbar {
-	border: none;
-}
-
-#pl_tab {
-
-}
 
 /*the playlist*/
 #playlist {
 	height: 340px;
 	overflow: scroll;
-	border: 1px solid white;
 	border-radius: 1%;
+	border-bottom: 1px solid white;
 }
 
-#dropdownMenu1 {
-	float: right;
-	color: green;
-	background: none;
-	border: none;
+.playlist_song {
+	margin-top: 5px;
+	border-bottom: 1px solid white;
+
 }
+
+#queue_up {
+	float: right;
+	top: -50px;
+	transform: rotateZ(180deg);
+	
+}
+
+#pl_title {
+	margin: 0;
+}
+
+.to_top {
+	// -ms-transform: rotate(180deg); /* IE 9 */
+ //  -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
+  
+
+}
+
+
 
 /*the form to add song*/
 
