--- a/css/main.css
+++ b/css/main.css
@@ -110,7 +110,9 @@ body {
 @media (min-width: 768px) {
   #pl1 {
     width: 39.5%;
-    float: left; }
+    float: left;
+    border: 1px solid rgba(255, 255, 255, 0.7);
+    border-radius: 1%; }
 
   #pl2 {
     margin: 0 0 0 1%;
