--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -13,7 +13,6 @@ body {
 
 #player {
 	width: 80%;
-	// height: 100px;
 	margin: 0 auto;
 	@include white(0.5);
 	border: 1px solid rgba(255,255,255,0.5);
@@ -147,6 +146,9 @@ body {
 	#pl1 {
 		width: 39.5%;
 		float: left;
+		border:1px solid rgba(255,255,255,0.7);
+		border-radius: 1%;;
+		
 	}
 
 	#pl2 {
@@ -154,6 +156,7 @@ body {
 		width: 59.5%;
 		float: left;
 	}
+
 	#new_song{
 		input {
 			margin: 18px 0;
@@ -162,7 +165,6 @@ body {
 			margin-top:28px;
 		}
 	}
-
 }
 
 
